--- a/api/templates/api/base.html
+++ b/api/templates/api/base.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Dr. Appointment</title>
+    <title></title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'api/css/style.css' %}" />
+    <!-- <script type="text/javascript" src="{% static 'api/bundles/bundle.js' %}"></script> -->
   </head>
   <body>
-    <div id="root">
-      This is root.
-    </div>
+    <main id="root">I AM ROOT.</main>
   </body>
 </html>
